--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI="mongodb+srv://User:Fanthom456world@cluster0.paigpn8.mongodb.net/bookstore_api?retryWrites=true&w=majority"
+MONGO_URI=mongodb+srv://User:Fanthom456world@cluster0.paigpn8.mongodb.net/bookstore_api?retryWrites=true&w=majority
